# LightNBT

./: .clang-format  CMakeLists.txt  LightNBTConfig.cmake.in  README.md  lmca.hpp  lnbt.hpp
example/: example1.cpp  example2.cpp  example3.cpp  example4.cpp  little_endian.nbt  test_CRLF.snbt  test_LF.snbt
